--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,22 +8,41 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+
   <title>Frontend Mentor | Product preview card component</title>
 
 </head>
+
 <body>
 
-  Perfume
+  <main class="container">
+    <div class="card">
+      <img src="./images/image-product-desktop.jpg" alt="Foto de perfume Chanel">
 
-  Gabrielle Essence Eau De Parfum
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+      <div class="info">
+        <p class="product">PERFUME</p>
 
-  $149.99
-  $169.99
+        <h1 class="name">Gabrielle Essence Eau De Parfum</h1>
 
-  Add to Cart
+        <p class="description">A floral, solar and voluptuous interpretation composed by Olivier Polge,
+          Perfumer-Creator for the House of CHANEL.</p>
+
+        <div class="price">
+          <span class="promo">$149.99</span>
+          <span class="older-price">$169.99</span>
+        </div>
+
+        <button class="btn">Add to Cart</button>
+      </div>
+    </div>
+  </main>
+
 </body>
+
 </html>
